;;;; -*- coding: utf-8; fill-column: 78 -*-

changes in sbcl-1.4.9 relative to sbcl-1.4.8:
  * enhancement: SB-COVER instrumentation for x86[-64] has signficantly less
    overhead. The performance penalty for 64-bit code has been measured at
    around 30% slower than uninstrumented code as contrasted with slowdowns
    in excess of 100% previously.
  * enhancement: tracing a generic function with the :METHODS T option
    produces output corresponding to each method called under the default
    :ENCAPSULATE NIL tracing implementation.
  * bug fix: updated TRACE documentation.  (lp#574614 was actually already
    fixed, but there were other issues.)
  * bug fix: fixed x86 GC bug causing heap corruption. (lp#1749369)
  * bug fix: improved compatibility with macOS High Sierra and graphical
    applications.

changes in sbcl-1.4.8 relative to sbcl-1.4.7:
  * bug fix: redefinition of method combinations now does the expected thing;
    generic functions using that method combination have their effective
    methods lazily recomputed according to the new definition of the method
    combination.  (Reported by Didier Verna at ELS 2018)
  * bug fix: :arguments argument to the long form of DEFINE-METHOD-COMBINATION
    is now implemented more correctly, supporting suppliedp variables and
    &optional defaults.  (Reported by Bruno Haible, lp#309084)

changes in sbcl-1.4.7 relative to sbcl-1.4.6:
  * enhancement: better handling of unknown keyword arguments (lp#1750466)
  * enhancement: namestrings can now be computed for certain pathnames that
    previously did not have namestrings because of #\. characters in their
    name and/or type components.
  * bug fix: compiling a SLEEP call with a float positive infinity argument no
    longer causes an internal error (lp#1754081)
  * bug fix: keyword arguments provided to a generic function with
    EQL-specialized methods are checked more correctly (reported by Syll,
    lp#1760987)
