@@ -848,6 +848,8 @@ like *STACK-TOP-HINT* and unsupported stuff like *TRACED-FUN-LIST*."
                "WEAK-POINTER"
                "WEAK-POINTER-P"
                "WEAK-POINTER-VALUE"
+               "MAKE-WEAK-VECTOR"
+               "WEAK-VECTOR-P"
 
                ;; Hash table extensions
                "DEFINE-HASH-TABLE-TEST"
@@ -3292,6 +3294,8 @@ structure representations"
                "UNWIND-BLOCK-SIZE" "VALUE-CELL-WIDETAG" "VALUE-CELL-SIZE"
                "VALUE-CELL-VALUE-SLOT" "VECTOR-DATA-OFFSET" "VECTOR-LENGTH-SLOT"
                "VECTOR-NORMAL-SUBTYPE"
+               "VECTOR-WEAK-SUBTYPE"
+               "VECTOR-WEAK-VISITED-SUBTYPE"
                "VECTOR-VALID-HASHING-SUBTYPE"
                "WEAK-POINTER-NEXT-SLOT"
                "WEAK-POINTER-SIZE" "WEAK-POINTER-WIDETAG"
