@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.4.9:
+  * enhancement: added SB-EXT:MAKE-WEAK-VECTOR
+
 changes in sbcl-1.4.9 relative to sbcl-1.4.8:
   * enhancement: SB-COVER instrumentation for x86[-64] has signficantly less
     overhead. The performance penalty for 64-bit code has been measured at
